packages/dart_edge_audio/lib/src/native/generated_bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:dart_edge_audio/dart_edge_audio.dart')
library;

import 'dart:ffi' as ffi;
import 'package:dart_edge_core/ffi.dart' as imp$1;

@ffi.Native<
  ffi.Pointer<NativeAudioBytesResult> Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Uint8>,
    ffi.IntPtr,
  )
>()
external ffi.Pointer<NativeAudioBytesResult> dart_edge_audio_convert_bytes(
  ffi.Pointer<ffi.Char> request_json,
  ffi.Pointer<ffi.Uint8> input_ptr,
  int input_len,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> dart_edge_audio_convert_file(
  ffi.Pointer<ffi.Char> request_json,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeAudioBytesResult>)>(
  isLeaf: true,
)
external void dart_edge_audio_free_bytes_result(
  ffi.Pointer<NativeAudioBytesResult> value,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>(isLeaf: true)
external void dart_edge_audio_free_string(ffi.Pointer<ffi.Char> value);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int dart_edge_audio_native_abi_version();

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Uint8>,
    ffi.IntPtr,
  )
>()
external ffi.Pointer<ffi.Char> dart_edge_audio_probe_bytes(
  ffi.Pointer<ffi.Char> options_json,
  ffi.Pointer<ffi.Uint8> input_ptr,
  int input_len,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> dart_edge_audio_probe_file(
  ffi.Pointer<ffi.Char> path,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> dart_edge_audio_take_last_error();

final class NativeAudioBytesResult extends ffi.Struct {
  external imp$1.NativeOwnedBytes bytes;

  external ffi.Pointer<ffi.Char> result_json;
}
